@@ -14,6 +14,7 @@
 # 160619-1010 - Added link_to_grey_version option
 # 160910-1317 - Added use_agent_colors option
 # 180223-1657 - Added $INSERT_ variables
+# 180425-2035 - Added #INSERT_first_onload variable
 #
 
 $conf_silent_prefix		= '5';	# vicidial_conferences prefix to enter silently and muted for recording
@@ -77,7 +78,8 @@ $win_valid_name			= 'subwindow_launch';	# only window name to allow if validatio
 
 $INSERT_head_script		= '';	# inserted right above the <script language="Javascript"> line after logging in
 $INSERT_head_js			= '';	# inserted after first javascript function
-$INSERT_window_onload	= '';	# inserted within the onload function
+$INSERT_first_onload	= '';	# inserted at the beginning of the first section of the onload function
+$INSERT_window_onload	= '';	# inserted at the end of the onload function
 $INSERT_agent_events	= '';	# inserted within the agent_events function
 
 
